@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-01T16:07:29Z",
-  "count_outdated" : 592,
-  "uniques_outdated" : 114,
+  "timestamp" : "2022-08-06T08:07:07Z",
+  "count_outdated" : 593,
+  "uniques_outdated" : 115,
   "count" : 604,
   "uniques" : 118,
   "views" : [
-    {
-      "timestamp": "2022-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-25T00:00:00Z",
       "count": 6,
